[gd_scene load_steps=8 format=2]

[ext_resource path="res://demo/demoScene.gd" type="Script" id=1]
[ext_resource path="res://demo/demo.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/demo2.tscn" type="PackedScene" id=3]
[ext_resource path="res://demo/demo3.tscn" type="PackedScene" id=4]
[ext_resource path="res://demo/demoHud.tscn" type="PackedScene" id=5]
[ext_resource path="res://demo/MyDemoObject.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.872406, -0.187607, 0, 0, 0, 0, 483.056, -2.23815, 0, 0, 0, 0, 478.955, 719.553, 0, 0, 0, 0, -0.872406, 715.452, 0, 0, 0, 0, -2.92294, 1.86294, 0, 0, 0, 0, -1.35992, 0.975647 )
}

[node name="demoScene" type="Node2D"]
script = ExtResource( 1 )
demo_objects = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ]

[node name="demoHud" parent="." instance=ExtResource( 5 )]

[node name="MyDemoObject" parent="." instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="MyDemoObject"]
position = Vector2( 227.283, 361.261 )
current = true
zoom = Vector2( 4, 4 )

[node name="Path2D" type="Path2D" parent="MyDemoObject"]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="MyDemoObject/Path2D"]
position = Vector2( -0.872406, -0.187607 )
rotation = -0.00423726

[node name="ObjectTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="ObjectTimer" to="." method="_on_ObjectTimer_timeout"]
